# qt-green-oasis

./: .gitignore  README.md
doc/: green_oasis_architecture.drawio
qt-rpi4/: CMakeLists.txt
qt-rpi4/core/: CMakeLists.txt  calculator.cpp  calculator.h  stringgenerator.cpp
qt-rpi4/src/: CMakeLists.txt  Main.qml
qt-rpi4/src/app/: CMakeLists.txt  main.cpp
qt-rpi4/src/core/: CMakeLists.txt  configmanager.cpp  configmanager.h  stringgenerator.h
qt-rpi4/src/weather/: CMakeLists.txt  weatherdata.cpp  weatherdata.h  weatherfetcher.cpp  weatherfetcher.h  weathermodel.cpp  weathermodel.h
qt-rpi4/test/: CMakeLists.txt  TestCalculator.cpp  calculatortest.cpp  calculatortest.h  configmanagertest.cpp  configmanagertest.h  stringtest.cpp  stringtest.h  test_main.cpp  testconfigmanager.cpp  testconfigmanager.h  testweatherdata.cpp  testweatherdata.h  weatherdatatest.cpp  weatherdatatest.h  weathermodeltest.cpp  weathermodeltest.h
qt-rpi4/test/data/: test_data_weather.json
qt_rpi4/: .gitignore  CMakeLists.txt
qt_rpi4/src/app/: CMakeLists.txt  Main.qml  main.cpp
qt_rpi4/src/app/qml/: Main.qml  WeatherPage.qml
qt_rpi4/src/core/: CMakeLists.txt  configmanager.cpp  configmanager.h  custommessagehandler.h  logger.cpp  logger.h
qt_rpi4/src/weather/: CMakeLists.txt  weatherdata.cpp  weatherdata.h  weatherfetcher.cpp  weatherfetcher.h  weathermodel.cpp  weathermodel.h
qt_rpi4/src/weather/qml/: WeatherPage.qml
qt_rpi4/test/: CMakeLists.txt  MockNetworkAccessManager.hpp  configmanagertest.cpp  configmanagertest.h  mocknetworkaccessmanager.cpp  mocknetworkaccessmanager.h  mocknetworkreply.cpp  mocknetworkreply.h  test_main.cpp  weatherdatatest.cpp  weatherfetchertest.cpp  weatherfetchertest.h  weathermodeltest.cpp  weathermodeltest.h
